Issue number:  404 Obtained from: Submitted by:  Dennis Seah Reviewed by:   Qingwen, Hua and Dilli replace new Boolean with Boolean.valueOf
git-svn-id: https://svn.java.net/svn/opensso~svn/trunk@1081 b2119f5d-607e-cfcf-c5d3-9fa3ed8061d4